# Tracking-eye-position

./: .gitignore  CMakeLists.txt  README.md  get_opencv.sh  install.sh  run.sh
apps/: CMakeLists.txt
apps/hdrmfs_eye_tracker/: CMakeLists.txt  main.cpp
examples/: calibration.csv  gaze_1.csv  gaze_2.csv  gaze_3.csv  gaze_4.csv  position_1.csv  position_2.csv  position_3.csv
eye_tracker/: CMakeLists.txt
eye_tracker/include/eye_tracker/: Settings.hpp  Utils.hpp  Visualizer.hpp
eye_tracker/include/eye_tracker/eye/: EyeEstimator.hpp
eye_tracker/include/eye_tracker/frameworks/: Framework.hpp  OnlineCameraFramework.hpp  VideoCameraFramework.hpp
eye_tracker/include/eye_tracker/image/: FeatureAnalyser.hpp  FeatureEstimator.hpp  ImagePreprocessor.hpp  TemporalFilterer.hpp
eye_tracker/include/eye_tracker/input/: IdsCamera.hpp  ImageProvider.hpp  InputVideo.hpp
eye_tracker/include/eye_tracker/optimizers/: FineTuner.hpp  GlintCircleOptimizer.hpp  NodalPointOptimizer.hpp  OpticalAxisOptimizer.hpp  Polynomial.hpp
eye_tracker/src/: Settings.cpp  Utils.cpp  Visualizer.cpp
eye_tracker/src/eye/: EyeEstimator.cpp
eye_tracker/src/frameworks/: Framework.cpp  OnlineCameraFramework.cpp  VideoCameraFramework.cpp
eye_tracker/src/image/: FeatureAnalyser.cpp  FeatureEstimator.cpp  ImagePreprocessor.cpp  TemporalFilterer.cpp
eye_tracker/src/input/: IdsCamera.cpp  ImageProvider.cpp  InputVideo.cpp
eye_tracker/src/optimizers/: FineTuner.cpp  GlintCircleOptimizer.cpp  NodalPointOptimizer.cpp  OpticalAxisOptimizer.cpp  Polynomial.cpp
resources/: capture_params.json
